[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-mobilewright"
version = "0.1.0"
# Tested against mobilecli HTTP server >= v0.3.69
description = "Robot Framework library for MobileWright mobile testing framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Abdelkader Hassine", email = "contact.abdelkaderhassine@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
keywords = ["robotframework", "mobile", "testing", "android", "ios", "mobilewright", "appium"]
dependencies = [
    "robotframework>=6.0",
    "websocket-client>=1.0",
]

[project.urls]
Homepage = "https://github.com/MarketSquare/robotframework-mobilewright"
Repository = "https://github.com/MarketSquare/robotframework-mobilewright"
Issues = "https://github.com/MarketSquare/robotframework-mobilewright/issues"
Documentation = "https://github.com/MarketSquare/robotframework-mobilewright/blob/main/docs/Mobilewright.html"

[project.optional-dependencies]
dev = [
    "pytest",
    "robotframework-tidy",
    "robotframework-robocop",
]

[tool.setuptools.packages.find]
include = ["Mobilewright*"]
